# lxqt-appswitcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: CMakeLists.txt  config.cpp  config.h  config.ui  main.cpp
config/translations/: lxqt-config-appswitcher.ts  lxqt-config-appswitcher_ca.ts  lxqt-config-appswitcher_cs.ts  lxqt-config-appswitcher_de.ts  lxqt-config-appswitcher_el.ts  lxqt-config-appswitcher_es.ts  lxqt-config-appswitcher_et.ts  lxqt-config-appswitcher_fi.ts  lxqt-config-appswitcher_fr.ts  lxqt-config-appswitcher_he.ts  lxqt-config-appswitcher_hi.ts  lxqt-config-appswitcher_hr.ts  lxqt-config-appswitcher_it.ts  lxqt-config-appswitcher_ko.ts  lxqt-config-appswitcher_lt.ts  lxqt-config-appswitcher_lv.ts  lxqt-config-appswitcher_nb_NO.ts  lxqt-config-appswitcher_nl.ts  lxqt-config-appswitcher_pl.ts  lxqt-config-appswitcher_pt.ts  lxqt-config-appswitcher_pt_BR.ts  lxqt-config-appswitcher_ru.ts  lxqt-config-appswitcher_si.ts  lxqt-config-appswitcher_tr.ts  lxqt-config-appswitcher_uk.ts
resources/: lxqt-appswitcher.desktop  lxqt-config-appswitcher.desktop
resources/themes/ambiance/: lxqt-app-switcher.qss
resources/themes/arc-dark/: lxqt-app-switcher.qss
resources/themes/kvantum/: lxqt-app-switcher.qss
src/: app-itemdelegate.cpp  app-itemdelegate.h  app-model.cpp  app-model.h  app-switcher.cpp  app-switcher.h  main.cpp  settings.h
translations/: lxqt-appswitcher.ts  lxqt-appswitcher_ca.ts  lxqt-appswitcher_cs.ts  lxqt-appswitcher_de.ts  lxqt-appswitcher_el.ts  lxqt-appswitcher_es.ts  lxqt-appswitcher_et.ts  lxqt-appswitcher_eu.ts  lxqt-appswitcher_fi.ts  lxqt-appswitcher_fr.ts  lxqt-appswitcher_gl.ts  lxqt-appswitcher_he.ts  lxqt-appswitcher_hi.ts  lxqt-appswitcher_hr.ts  lxqt-appswitcher_it.ts  lxqt-appswitcher_ko.ts  lxqt-appswitcher_lt.ts  lxqt-appswitcher_lv.ts  lxqt-appswitcher_nb_NO.ts  lxqt-appswitcher_nl.ts  lxqt-appswitcher_pa.ts  lxqt-appswitcher_pl.ts  lxqt-appswitcher_pt.ts  lxqt-appswitcher_pt_BR.ts  lxqt-appswitcher_ru.ts  lxqt-appswitcher_si.ts  lxqt-appswitcher_tr.ts  lxqt-appswitcher_uk.ts
